# ai-rag-chatbot

./: README.md  pyproject.toml
src/ai_rag_chatbot/api/: chroma_utils.py  db_utils.py  langchain_utils.py  main.py  pydantic_models.py  rag_app.db
src/ai_rag_chatbot/api/chroma_db/: chroma.sqlite3
src/ai_rag_chatbot/app/: api_utils.py  chat_interface.py  config.py  sidebar.py  streamlit_app.py
