[project]
name = "ai-rag-chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Danny Pulickal",email = "dannypulickal@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "langchain (>=1.2.17,<2.0.0)",
    "langchain-openai (>=1.2.1,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "docx2txt (>=0.9,<0.10)",
    "pypdf (>=6.10.2,<7.0.0)",
    "langchain-chroma (>=1.1.0,<2.0.0)",
    "python-multipart (>=0.0.27,<0.0.28)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "streamlit (>=1.57.0,<2.0.0)",
    "requests (>=2.33.1,<3.0.0)"
]

[tool.poetry]
packages = [{ include = "ai_rag_chatbot", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
